Custom types support for CLI options and arguments
For a CLI option or argument, any type with a public constructor or a static `Parse` method with a string parameter
        can be now be used. These types can be bound/parsed automatically even if they are wrapped with `Enumerable` or `Nullable`
        type (note that as of current version, custom class support when using AOT compilation is not stable but trimming works)

--- a/src/DotMake.CommandLine.SourceGeneration/Resources.resx
+++ b/src/DotMake.CommandLine.SourceGeneration/Resources.resx
@@ -150,6 +150,9 @@
   <data name="PropertyNotPublicNonStatic" xml:space="preserve">
     <value>The property '{0}' will not generate a {1} (ignored) because it is not a public/internal and non-static property.</value>
   </data>
+  <data name="PropertyTypeIsNotBindable" xml:space="preserve">
+    <value>The property '{0}' has custom type '{2}' (other than supported CLR types) so it should have a public constructor or a static 'Parse' method with a string parameter, so that it can be bound/parsed as a {1} .</value>
+  </data>
   <data name="UnsupportedLanguage" xml:space="preserve">
     <value>Source generation currently supports only C# language in the consuming project.</value>
   </data>
